--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 # nas-config.env
-DUCKDNS_TOKEN="721e48df-8ce6-48ee-b705-b5ba9b66873d"
-DUCKDNS_DOMAIN="homenodeserver.duckdns.org"
+DUCKDNS_TOKEN="enter-your-token-here"
+DUCKDNS_DOMAIN="enter-your-duck-dns-domain"
 
