--- a/nas_workstation_adv/config.env
+++ b/nas_workstation_adv/config.env
@@ -1,7 +1,7 @@
 # config.env - User-provided secure configuration
 
-DUCKDNS_TOKEN="721e48df-8ce6-48ee-b705-b5ba9b66873d"
-DUCKDNS_DOMAIN="homenodeserver.duckdns.org"
+DUCKDNS_TOKEN="your-token"
+DUCKDNS_DOMAIN="your-domain"
 NEXTCLOUD_ADMIN_USER="admin"
-NEXTCLOUD_ADMIN_PASSWORD="Sarang123"
+NEXTCLOUD_ADMIN_PASSWORD="hush-hush-password"
 
